# ctrail-server

./: .env.example  GODOT_INTEGRATION.md  PROJECT_SUMMARY.md  README.md  clear_scores.py  leaderboard.db  main.py  pyproject.toml  start.ps1  start.sh  test_api.py
app/: __init__.py  config.py  database.py
app/api/: leaderboard.py
app/models/: leaderboard.py
app/schemas/: leaderboard.py
app/services/: leaderboard.py
design/: api.md  arch.md
tests/: test_leaderboard.py
