[project]
name = "ctrail-server"
version = "0.1.0"
description = "Game leaderboard server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
    "requests>=2.31.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
]
